fix: sticker doesn't overflow from camera section anymore and rework some css stuff

--- a/frontend/srcs/stylesheets/picture.css
+++ b/frontend/srcs/stylesheets/picture.css
@@ -5,7 +5,7 @@
 body,
 html {
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
 	position: relative;
 	width: 100%;
@@ -59,11 +59,11 @@ html {
 	height: 550px;
 	display: inline-block;
 	position: relative;
+	overflow: hidden;
 }
 
 .placed-sticker {
     position: absolute !important;
-    z-index: 10 !important;
     pointer-events: none !important;
 	max-width: 128px;
 	max-height: 128px;
@@ -115,7 +115,7 @@ html {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-	max-height: 80vh;
+	/* max-height: 80vh; */
 	padding: 20px;
 }
 
